--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -102,6 +102,57 @@
         </Grid>
     </DataTemplate>
 
+    <DataTemplate x:Key="LoadingPlaylistListViewItem">
+        <Grid Margin="0,0,0,5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid Grid.Column="0" 
+                  HorizontalAlignment="Left"
+                  Background="{StaticResource PhoneSecondaryBackgroundBrush}"
+                  Height="100"
+                  Width="173">
+
+                <Image Source="{Binding ImagePath}" 
+                       Stretch="UniformToFill" />
+
+                <Border Margin="2"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
+                        Background="Black"
+                        Padding="4,0,4,0">
+                    <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
+                               TextWrapping="NoWrap" 
+                               Foreground="White"
+                               FontSize="14"/>
+                </Border>
+            </Grid>
+
+            <StackPanel Grid.Column="1" 
+                        Margin="0,0,-10,0">
+                <TextBlock Text="{Binding Title}" 
+                           Style="{StaticResource PhoneTextNormalStyle}"
+                           TextTrimming="WordEllipsis"
+                           TextWrapping="Wrap"
+                           MaxHeight="54"/>
+                <TextBlock Text="{Binding ItemsCount}" 
+                           Style="{StaticResource PhoneTextSmallStyle}"
+                           TextWrapping="NoWrap"/>
+                <TextBlock TextWrapping="NoWrap"
+                           Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
+                           Style="{StaticResource PhoneTextSmallStyle}" 
+                           FontSize="18">
+                           Foreground="#FF67217A">
+                    <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
+                    <Run Text="{Binding PublishedAt}" />
+                </TextBlock>
+            </StackPanel>
+        </Grid>
+    </DataTemplate>
+
     <DataTemplate x:Key="ContextMenuListViewItem">
         <Grid>
             <ContentPresenter Content="{Binding}"
@@ -124,6 +175,29 @@
                          common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
                          ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
                          ItemTemplate="{StaticResource LoadingListViewItem}"/>
+
+                <Grid x:Name="BlockMulti" 
+                      Width="50" 
+                      Background="Transparent" 
+                      HorizontalAlignment="Left" 
+                      Visibility="Visible"/>
+            </Grid>
+
+            <ContentPresenter Content="{Binding}"
+                              ContentTemplate="{StaticResource LoadingTextBlockDataTemplate}"/>
+        </Grid>
+    </DataTemplate>
+
+    <DataTemplate x:Key="LoadingPlaylstListView" >
+        <Grid x:Name="ContentRoot">
+            <Grid>
+                <ListBox Margin="0" 
+                         ItemsSource="{Binding Items}"
+                         toolkit:TiltEffect.IsTiltEnabled="True" 
+                         common:ItemClickCommand.Command="{Binding ItemClickCommand}"
+                         common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
+                         ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
+                         ItemTemplate="{StaticResource LoadingPlaylistListViewItem}"/>
 
                 <Grid x:Name="BlockMulti" 
                       Width="50" 
