--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:common="clr-namespace:LiteTube.Common">
+    xmlns:common="clr-namespace:LiteTube.Common"
+    xmlns:converters="clr-namespace:LiteTube.Converters">
 
     <DataTemplate x:Key="LoadingTextBlockDataTemplate">
         <Grid>
@@ -52,7 +53,7 @@
     </DataTemplate>
 
     <DataTemplate x:Key="LoadingListViewItem">
-        <Grid Margin="0,0,0,5">
+        <Grid Margin="0,0,0,5" Background="{Binding IsNowPlaying, Converter={StaticResource ColorValueConverter}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -62,41 +63,42 @@
                   HorizontalAlignment="Left"
                   Background="{StaticResource PhoneSecondaryBackgroundBrush}"
                   Height="100"
-                  Width="173">
+                  Width="173"
+                  Margin="2">
 
                 <Image Source="{Binding ImagePath}" 
-                       Stretch="UniformToFill" />
+                    Stretch="UniformToFill" />
 
                 <Border Margin="2"
-                        VerticalAlignment="Bottom"
-                        HorizontalAlignment="Right"
-                        Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
-                        Background="Black"
-                        Padding="4,0,4,0">
+                    VerticalAlignment="Bottom"
+                    HorizontalAlignment="Right"
+                    Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
+                    Background="Black"
+                    Padding="4,0,4,0">
                     <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
-                               TextWrapping="NoWrap" 
-                               Foreground="White"
-                               FontSize="14"/>
+                            TextWrapping="NoWrap" 
+                            Foreground="White"
+                            FontSize="14"/>
                 </Border>
             </Grid>
 
             <StackPanel Grid.Column="1" 
-                        Margin="0,0,-10,0">
+                    Margin="0,0,-10,0">
                 <TextBlock Text="{Binding Title}" 
-                           Style="{StaticResource PhoneTextNormalStyle}"
-                           TextTrimming="WordEllipsis"
-                           TextWrapping="Wrap"
-                           MaxHeight="54"/>
+                        Style="{StaticResource PhoneTextNormalStyle}"
+                        TextTrimming="WordEllipsis"
+                        TextWrapping="Wrap"
+                        MaxHeight="54"/>
                 <TextBlock Text="{Binding ChannelTitle}" 
-                           Style="{StaticResource PhoneTextSmallStyle}"
-                           TextWrapping="NoWrap"/>
+                        Style="{StaticResource PhoneTextSmallStyle}"
+                        TextWrapping="NoWrap"/>
                 <TextBlock TextWrapping="NoWrap"
-                           Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
-                           Style="{StaticResource PhoneTextSmallStyle}" 
-                           FontSize="18">
-                           <!--Foreground="#FF67217A">-->
-                    <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
-                    <Run Text="{Binding PublishedAt}" />
+                        Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
+                        Style="{StaticResource PhoneTextSmallStyle}" 
+                        FontSize="18">
+                        <!--Foreground="#FF67217A">-->
+                <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
+                <Run Text="{Binding PublishedAt}" />
                 </TextBlock>
             </StackPanel>
         </Grid>
