--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -774,6 +774,7 @@
                 <ListBox ItemsSource="{Binding RelatedItems}"
                          ItemTemplate="{StaticResource RelatedVideoItem}"
                          common:ItemClickCommand.Command="{Binding ItemClickCommand}"
+                         common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
                          ScrollViewer.VerticalScrollBarVisibility="Hidden"
                          toolkit:TiltEffect.IsTiltEnabled="True"
                          Margin="0,0,0,0">
