--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -120,16 +120,11 @@
                 <Image Source="{Binding ImagePath}" 
                        Stretch="UniformToFill" />
 
-                <Border Margin="2"
-                        VerticalAlignment="Bottom"
+                <Border VerticalAlignment="Stretch"
                         HorizontalAlignment="Right"
-                        Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
-                        Background="Black"
-                        Padding="4,0,4,0">
-                    <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
-                               TextWrapping="NoWrap" 
-                               Foreground="White"
-                               FontSize="14"/>
+                        Width="50"
+                        Background="#80000000">
+                    <ContentPresenter ContentTemplate="{StaticResource PlayListIcon}" />
                 </Border>
             </Grid>
 
@@ -140,14 +135,15 @@
                            TextTrimming="WordEllipsis"
                            TextWrapping="Wrap"
                            MaxHeight="54"/>
-                <TextBlock Text="{Binding ItemsCount}" 
-                           Style="{StaticResource PhoneTextSmallStyle}"
-                           TextWrapping="NoWrap"/>
+                <TextBlock Style="{StaticResource PhoneTextSmallStyle}"
+                           TextWrapping="NoWrap">
+                    <Run Text="{Binding ItemsCount}" />
+                    <Run Text="{Binding Path=LocalizedResources.videos, Source={StaticResource LocalizedStrings}}"/>
+                </TextBlock>
                 <TextBlock TextWrapping="NoWrap"
                            Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
                            Style="{StaticResource PhoneTextSmallStyle}" 
                            FontSize="18">
-                           Foreground="#FF67217A">
                     <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
                     <Run Text="{Binding PublishedAt}" />
                 </TextBlock>
