--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -750,12 +750,14 @@
                     Grid.Row="0"
                     DataContext="{TemplateBinding ViewModel}" 
                     Background="{TemplateBinding Background}"
+                    BorderThickness="0"
                     Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
             <Border x:Name="RelatedBorder" 
                     Grid.Column="1"
                     Grid.Row="0"
                     Grid.RowSpan="3"
+                    BorderThickness="0"
                     DataContext="{TemplateBinding ViewModel}" 
                     Background="{TemplateBinding Background}"
                     Visibility="{Binding MediaPlayer.IsRelatedItemsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
@@ -851,7 +853,11 @@
 
                         <StackPanel Orientation="Horizontal" x:Name="NonEssentialsNearLeft"
                                     Margin="0,0,0,0">
-                            <Button x:Name="SkipPreviousButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" Visibility="{Binding IsSkipPreviousButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                            <Button x:Name="SkipPreviousButton" 
+                                    Style="{TemplateBinding TransportBarButtonStyle}" 
+                                    Width="50" Height="50" 
+                                    Visibility="{Binding IsSkipPreviousButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
+                                    Margin="10,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:SkipPreviousButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
@@ -890,7 +896,11 @@
                                     <local:FastForwardButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
                             </Button>
-                            <Button x:Name="SkipNextButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" Visibility="{Binding IsSkipNextButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                            <Button x:Name="SkipNextButton" 
+                                    Style="{TemplateBinding TransportBarButtonStyle}" 
+                                    Width="50" Height="50" 
+                                    Visibility="{Binding IsSkipNextButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
+                                    Margin="0,0,10,0">
                                 <local:MediaControls.Behavior>
                                     <local:SkipNextButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
