Scroll into view ??? ????????? ??? skipNext skipPrevious

--- a/LiteTube/PlaylistVideoPage.xaml
+++ b/LiteTube/PlaylistVideoPage.xaml
@@ -47,7 +47,8 @@
                 </phone:PivotItem.Header>
 
                 <ContentPresenter Content="{Binding PlaylistVideosViewModel}"
-                                  ContentTemplate="{StaticResource LoadingListView}"/>
+                                  ContentTemplate="{StaticResource LoadingListView}"
+                                  Name="playlistPresenter"/>
             </phone:PivotItem>
 
             <!--Pivot item two-->
