--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -281,13 +281,14 @@
               Background="Black"
               Name="playerBg">
                 <controls:LiteTubePlayer x:Name="player"
-                                         Source="{Binding VideoUri}"
                                          VideoTitle="{Binding Title}"
                                          ChannelTitle="{Binding ChannelTitle}"
                                          ItemClickCommand="{Binding RelatedVideosViewModel.ItemClickCommand}"
                                          PosterSource="{Binding ImagePath}"
                                          RelatedItems="{Binding RelatedVideosViewModel.Items}"
                                          LoadMoreCommand="{Binding RelatedVideosViewModel.LoadMoreCommand}"
+                                         VideoQualityItems="{Binding VideoQualities}"
+                                         SelectedVideoQualityItem="{Binding SelectedVideoQualityItem, Mode=TwoWay, UpdateSourceTrigger=Default}"
                                          IsFullScreenVisible="True"
                                          IsFullScreenEnabled="True"
                                          VerticalAlignment="Center"
