--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -675,12 +675,46 @@
         </Border>
     </DataTemplate>
 
-    <DataTemplate x:Key="VideoQualityItem">
-        <TextBlock Text="{Binding}"
-                   Margin="5"
-                   Foreground="White"/>
-    </DataTemplate>
-
+    <Style x:Key="VideoQualityItemStyle" TargetType="ListBoxItem">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="VerticalContentAlignment" Value="Top"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBoxItem">
+                    <Border x:Name="LayoutRoot" 
+                            CornerRadius="5"
+                            Margin="5"
+                            Background="{TemplateBinding Background}" 
+                            Visibility="{Binding Visibility}" >
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="SelectionStates">
+                                <VisualState x:Name="Unselected"/>
+                                <VisualState x:Name="Selected">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" 
+                                                                       Storyboard.TargetName="LayoutRoot">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Border Name="BackgroundSquare">
+                            <TextBlock Text="{Binding QualityName}"
+                                       Name="text"
+                                       Margin="6,0,6,4"/>
+                        </Border>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <ControlTemplate x:Key="ControlPanelTemplate" TargetType="local:ControlPanel">
         <Grid VerticalAlignment="Stretch">
             <Grid.RowDefinitions>
@@ -754,6 +788,7 @@
                            Foreground="#FFD1D1D1"/>
             </StackPanel>
 
+            <!--Little square in top right corner-->
             <Border Grid.Column="2"
                     Grid.Row="0"
                     DataContext="{TemplateBinding ViewModel}" 
@@ -761,6 +796,7 @@
                     BorderThickness="0"
                     Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
+            <!--Empty related background-->
             <Border x:Name="RelatedBorder" 
                     Grid.Column="1"
                     Grid.Row="0"
@@ -985,26 +1021,19 @@
                                                    Visibility="{Binding IsResolutionIndicatorVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"/>
                     </StackPanel>
 
-                    <ListBox Margin="10" Foreground="White">
-                        <ListBoxItem Content="360p" ContentTemplate="{StaticResource VideoQualityItem}"/>
-                        <ListBoxItem Content="480p" ContentTemplate="{StaticResource VideoQualityItem}"/>
-                        <ListBoxItem Content="720p" ContentTemplate="{StaticResource VideoQualityItem}"/>
+                    <!--Video quality listbox-->
+                    <ListBox Margin="10" 
+                             Foreground="White"
+                             ItemsSource="{Binding MediaPlayer.VideoQualityItems}"
+                             ItemContainerStyle="{StaticResource VideoQualityItemStyle}"
+                             SelectedItem="{Binding MediaPlayer.SelectedVideoQualityItem, Mode=TwoWay}"
+                             Visibility="{Binding MediaPlayer.IsFullScreen, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <ListBox.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <StackPanel Orientation="Horizontal"/>
                             </ItemsPanelTemplate>
                         </ListBox.ItemsPanel>
                     </ListBox>
-                    <!--<StackPanel Orientation="Horizontal">
-                        <RadioButton Content="144p" GroupName="VideoQuality"/>
-                        <RadioButton Content="240p" GroupName="VideoQuality"/>
-                        <RadioButton Content="360p" GroupName="VideoQuality"/>
-                        <RadioButton Content="480p" GroupName="VideoQuality"/>
-                        <RadioButton Content="720p" GroupName="VideoQuality"/>
-                        <RadioButton Content="1080p" GroupName="VideoQuality"/>
-                    </StackPanel>-->
-
-
                 </Grid>
             </Border>
 
@@ -1019,6 +1048,7 @@
                 </Border.Resources>
             </Border>
 
+            <!--Fullscreen buttons-->
             <Grid Grid.Column="2"
                   Grid.Row="2">
                 <Button x:Name="FullScreenButton" 
