--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -156,10 +156,13 @@
             <ContentPresenter Content="{Binding}"
                               ContentTemplate="{StaticResource LoadingListViewItem}"/>
             <toolkit:ContextMenuService.ContextMenu>
-                <toolkit:ContextMenu Name="ContextMenu">
+                <toolkit:ContextMenu Name="ContextMenu" 
+                                     Background="#FFF1F0EE" 
+                                     IsZoomEnabled="False">
                     <toolkit:MenuItem Name="Delete"  
                                       Header="{Binding Path=LocalizedResources.Delete, Source={StaticResource LocalizedStrings}}" 
                                       Command="{Binding DeleteCommand}"
+                                      BorderBrush="Black"
                                       Foreground="Black"/>
                 </toolkit:ContextMenu>
             </toolkit:ContextMenuService.ContextMenu>
